--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,13 +1,39 @@
 @charset "utf-8";
+/*RESET*/
+* {margin: 0;}
+ul,ol {list-style-type:none;}
+
+/*Main */
 body {
-	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
+	font: 14px  Arial, Helvetica, sans-serif;
 	background: url(../images/design/bg.png) repeat;
 }
+#content{margin: 30px 0 10px;}
+/*frontpage*/
+#logo_main { margin: 10px;}
+#logo_main img {width: 100%;}
+
+/*about*/
+#logo img {height:75px; margin: 10px 0 10px;}
+#user, #corporative { border:1px solid black; margin:0 1px 0; }
+#main img {margin: 10px 0 10px;}
+#follow {margin: 70px   0 0 ; }
+
+.thumb_79 { margin: 10px;}
+.thumb_79 img {width: 79px;}
+
+/*calendar*/
 
 #event_edit_container { display:none;}
 
-
+/*Styling*/
+.story{background: url(../images/design/line.png) top;  font-family: Arial, Helvetica, sans-serif; line-height:31px; color:#38373a;} 
+.descr{font-family: Helvetica,Arial, sans-serif; font-size:14px; color:#97959c; padding: 20px 0 0 99px ;}
+.descr span { font-weight:bold; font-size: 18px; color:#3b3b3b;}
+.support {color:#97959c !important; font-size: 14px; }
+/*Support*/
 .center {text-align: center; }
+.left{float:left; }
 .clear {
 	clear:both;
 }
