--- a/getaslot/templates/index.html
+++ b/getaslot/templates/index.html
@@ -1,1 +1,37 @@
-whatever
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+   "http://www.w3.org/TR/html4/loose.dtd">
+
+<html lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>getaslot.com</title>
+	<meta name="generator" content="TextMate http://macromates.com/">
+	<meta name="author" content="Agris Ameriks">
+	<!-- Date: 2011-11-19 -->
+	<style type="text/css"> 
+		body {
+			background: url('{{ STATIC_URL }}images/bg.png') repeat;
+		}
+		#logo {
+			width:501px;
+			height:95px;
+			
+			margin:0 auto;
+		}
+		
+		#outer {width:501px;margin:0 auto;position: static;}
+		#middle {position: absolute; top: 40%; display: table-cell; vertical-align: middle; width: 501px;}
+		#inner {top: -40%; background: url('{{ STATIC_URL }}images/logo.png') no-repeat;height:95px;}
+		
+	</style>
+</head>
+<body>
+	<div id="outer">
+	  <div id="middle">
+	    <div id="inner">
+	    </div>
+	  </div>
+	</div>
+	
+</body>
+</html>
