--- a/getaslot/templates/index.html
+++ b/getaslot/templates/index.html
@@ -3,6 +3,7 @@
 
 <html lang="en">
 <head>
+	<link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>getaslot.com</title>
 	<meta name="generator" content="TextMate http://macromates.com/">
@@ -21,14 +22,16 @@
 		
 		#outer {width:501px;margin:0 auto;position: static;}
 		#middle {position: absolute; top: 40%; display: table-cell; vertical-align: middle; width: 501px;}
-		#inner {top: -40%; background: url('{{ STATIC_URL }}images/logo.png') no-repeat;height:95px;}
+		#inner {top: -40%; background: url('{{ STATIC_URL }}images/logo.png') no-repeat;height:95px;padding-top:120px;text-align:center;font: 1.2em  Arial, Helvetica, sans-serif;}
+		a {color:#38373a;text-decoration:none;}
+		a:hover {color:#f8373a;}
 		
 	</style>
 </head>
 <body>
 	<div id="outer">
 	  <div id="middle">
-	    <div id="inner">
+	    <div id="inner"><a href="/about/">About team</a>
 	    </div>
 	  </div>
 	</div>
