--- a/getaslot/templates/about.html
+++ b/getaslot/templates/about.html
@@ -29,7 +29,7 @@
                             <img src="{{ STATIC_URL }}images/about/logo.png"  />
            </div>
            <div id="follow" class="grid_6 ">
-                            <img src="{{ STATIC_URL }}images/about/follow.png"  />
+                            <a href="http://www.twitter.com/getaslot" target="_blank"><img src="{{ STATIC_URL }}images/about/follow.png"  /></a>
            </div>
         </div>
        <div class="clear"></div> 
