--- a/getaslot/templates/about.html
+++ b/getaslot/templates/about.html
@@ -49,7 +49,7 @@
                     		<img src="{{ STATIC_URL }}images/about/creators/edgars.png" />
                         </div>
                         <div class="descr" >
-                            <span>Edgars</span>
+                            <a href="http://www.twitter.com/edgarsj" target="_blank"><span>Edgars</span></a>
                             <div class="story support"> Team-lead/ Back-end developer</div>
                         </div>
                     </li>
@@ -59,7 +59,7 @@
                     		<img src="{{ STATIC_URL }}images/about/creators/agris.png" />
                         </div>
                         <div class="descr" >
-                            <span>Agris</span>
+                            <a href="http://www.twitter.com/AgrisAmeriks" target="_blank"><span>Agris</span></a>
                             <div class="story support">Back-end developer</div>
                         </div>
                     </li>
@@ -89,7 +89,7 @@
                     		<img src="{{ STATIC_URL }}images/about/creators/arvids.png" />
                         </div>
                         <div class="descr" >
-                            <span>Arvids</span>
+                            <a href="http://www.arvidsbaranovs.com" target="_blank"><span>Arvids</span></a>
                             <div class="story support"> Designer</div>
                         </div>
                     </li>
