--- a/html/css/admin.css
+++ b/html/css/admin.css
@@ -62,7 +62,17 @@ blockquote, q {
 
 /* custom callendar css */
 body {background: url(../images/design/bg.png) repeat;}
+#calendar .wc-top {background: #e36245;height: 14px;border-bottom: 1px solid #ba5039;
+-moz-border-radius-topleft: 10px;-moz-border-radius-topright: 10px;
+-webkit-border-top-left-radius: 10px;-webkit-border-top-right-radius: 10px;
+border-top-left-radius: 10px;border-top-right-radius: 10px;
+}
 
+#calendar .wc-bot {background: #e36245;height: 14px;border-top: 1px solid #ba5039;
+-moz-border-radius-topleft: 10px;-moz-border-radius-topright: 10px;
+-webkit-border-top-left-radius: 10px;-webkit-border-top-right-radius: 10px;
+border-top-left-radius: 10px;border-top-right-radius: 10px;
+}
 
 
 
