--- a/getaslot/templates/about.html
+++ b/getaslot/templates/about.html
@@ -1,28 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-	<link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" />
-	<title>About Getaslot</title>
-	<meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta content="getaslot.com" name="author" />
-	<!--
-	<link rel="shortcut icon" href="/favicon.ico" /> 
-	<link rel="icon" href="/favicon.ico" type="image/x-icon" /> 
-	-->
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/text.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/960.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" />
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/start/jquery-ui.css" />
+{% extends 'base.html' %}
+{% block content %}
 
-	<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'></script>
-	<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js'></script>
-
-</head>
-
-<body>
 <div id="wrapper" class="container_12 about">
 		<div id="header" class="container_12">
            <div id="logo" class="grid_6 " >
@@ -101,5 +79,5 @@
             
         </div>
 	</div> <!-- Wrapper -->  
-</body>
-</html>
+	    <hr/>
+	{% endblock %}
