--- a/html/css/admin.css
+++ b/html/css/admin.css
@@ -55,13 +55,17 @@ blockquote, q {
 .clear {	clear: both;}
 
 /* basic structure */
-#header {width: 960px;margin: 0 auto;border: 1px solid #ddd;min-height: 65px;}
+#header {width: 960px;margin: 0 auto;}
 #content {width: 960px;margin: 0 auto;}
 #footer {width: 960px;margin: 0 auto;border: 1px solid #ddd;min-height: 50px;}
 
 
 /* custom callendar css */
 body {background: url(../images/design/bg.png) repeat;}
+.bcknd #header {width: 100%;border-top: 8px solid #262626;}
+.bcknd #header .inr {width: 960px;margin: 0 auto;min-height: 65px;}
+.bcknd .logo {margin: 25px 0 0 29px;}
+
 #calendar .wc-top {background: #e36245;height: 14px;border-bottom: 1px solid #ba5039;margin: 0 0 0 17px;
 -moz-border-radius-topleft: 10px;-moz-border-radius-topright: 10px;
 -webkit-border-top-left-radius: 10px;-webkit-border-top-right-radius: 10px;
