--- a/html/css/jquery.wekcalendar.css
+++ b/html/css/jquery.wekcalendar.css
@@ -24,7 +24,7 @@
     width: 100%;
 }
 .wc-header .wc-time-column-header {
-    width: 12%;
+    width: 96px;
 }
 .wc-header .wc-scrollbar-shim {
     width: 16px;
