--- a/html/css/admin.css
+++ b/html/css/admin.css
@@ -82,6 +82,7 @@ border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;
 .wc-business-hours {margin: 0 0 0 55px;border-bottom: 1px solid #d7d6ca;}
 .wc-hour-end, .wc-hour-header {border-bottom: 1px solid #d7d6ca;}
 .wc-time-header-cell {font-size: 12px;font-weight: bold;line-height: 30px;}
+.wc-scrollable-grid {height: 401px!important;}
 
 
 
