Added demo calendar

--- a/getaslot/templates/base.html
+++ b/getaslot/templates/base.html
@@ -16,6 +16,9 @@
 		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js'></script>
 		
 		<link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" />
+		
+		{% block header %}{% endblock %}
+		
     </head>
     <body>
         {% block content %}{% endblock %}
