--- a/getaslot/site_media/media/css/admin.css
+++ b/getaslot/site_media/media/css/admin.css
@@ -7,7 +7,7 @@
 				 ---
 
 /* RESET */
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { 
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,textarea,p,blockquote,th,td { 
 	margin:0;
 	padding:0;
 }
@@ -18,7 +18,7 @@ ol, ul, dir, menu {
 	list-style: none;
 	list-style-type: none;
 }
-fieldset,img,abbr,acronym,input { 
+fieldset,img,abbr,acronym { 
 	border:0;
 	outline: 0;
 }
@@ -55,14 +55,34 @@ blockquote, q {
 .clear {	clear: both;}
 
 /* basic structure */
-#header {width: 960px;margin: 0 auto;border: 1px solid #ddd;min-height: 65px;}
-#content {width: 960px;margin: 0 auto;border: 1px solid #ddd;min-height: 300px;}
+#header {width: 960px;margin: 0 auto;}
+#content {width: 960px;margin: 0 auto;}
 #footer {width: 960px;margin: 0 auto;border: 1px solid #ddd;min-height: 50px;}
 
 
 /* custom callendar css */
+body {background: url(../images/design/bg.png) repeat;}
+.bcknd #header {width: 100%;border-top: 8px solid #262626;}
+.bcknd #header .inr {width: 960px;margin: 0 auto;min-height: 65px;}
+.bcknd .logo {margin: 25px 0 0 29px;}
 
+#calendar .wc-top {background: #e36245;height: 14px;border-bottom: 1px solid #ba5039;margin: 0 0 0 17px;
+-moz-border-radius-topleft: 10px;-moz-border-radius-topright: 10px;
+-webkit-border-top-left-radius: 10px;-webkit-border-top-right-radius: 10px;
+border-top-left-radius: 10px;border-top-right-radius: 10px;
+}
 
+#calendar .wc-bot {background: #e36245;height: 14px;border-top: 1px solid #ba5039;margin: 0 0 0 17px;
+-moz-border-radius-bottomleft: 10px;-moz-border-radius-bottomright: 10px;
+-webkit-border-bottom-left-radius: 10px;-webkit-border-bottom-right-radius: 10px;
+border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;
+}
+
+.wc-header {margin: 0 0 0 17px;width: 943px;border-bottom: 1px solid #d7d6ca;}
+.wc-business-hours {margin: 0 0 0 55px;border-bottom: 1px solid #d7d6ca;}
+.wc-hour-end, .wc-hour-header {border-bottom: 1px solid #d7d6ca;}
+.wc-time-header-cell {font-size: 12px;font-weight: bold;line-height: 30px;}
+.wc-scrollable-grid {height: 401px!important;}
 
 
 
