--- a/getaslot/templates/business/business.html
+++ b/getaslot/templates/business/business.html
@@ -1,47 +1,59 @@
 {% extends 'base.html' %}
 {% block header %}
+
+
+
 <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.wekcalendar.css" media="screen, print, projection" />
 <link rel="stylesheet" href="{{ STATIC_URL }}css/caldemo.css" media="screen, print, projection" />
+<link rel="stylesheet" href="{{ STATIC_URL }}css/admin.css" media="screen, print, projection" />
 <script type="text/javascript" src="{{ STATIC_URL }}js/weekcalendar.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/demo.js"></script>
+
 
 
 
 {% endblock %}
 {% block content %}
 
-	<div id="header">
-    	
-	</div>
-    
-	<div id="content">
-        <div id="calendar"></div>
-        <div id="event_edit_container">
-            <form>
-                <input type="hidden" />
-                <ul>
-                    <li>
-                        <span>Date: </span><span class="date_holder"></span> 
-                    </li>
-                    <li>
-                        <label for="start">Start Time: </label><select name="start"><option value="">Select Start Time</option></select>
-                    </li>
-                    <li>
-                        <label for="end">End Time: </label><select name="end"><option value="">Select End Time</option></select>
-                    </li>
-                    <li>
-                        <label for="title">Title: </label><input type="text" name="title" />
-                    </li>
-                    <li>
-                        <label for="body">Body: </label><textarea name="body"></textarea>
-                    </li>
-                </ul>
-            </form>
-        </div>
-    	
-	</div>
-    
-	<div id="footer">
+	<div class="bcknd">
+		<div id="header">
+			<div class="inr">
+				<div class="logo">
+					<a href="./" title="getaslot.com"><img alt="getaslot logo" src="{{ STATIC_URL }}images/design/logo.png" /></a>
+				</div>
+			</div>
+		</div>
 		
+		<div id="content">
+			<div id="calendar"></div>
+			<div id="event_edit_container">
+				<form>
+					<input type="hidden" />
+					<ul>
+						<li>
+							<span>Date: </span><span class="date_holder"></span> 
+						</li>
+						<li>
+							<label for="start">Start Time: </label><select name="start"><option value="">Select Start Time</option></select>
+						</li>
+						<li>
+							<label for="end">End Time: </label><select name="end"><option value="">Select End Time</option></select>
+						</li>
+						<li>
+							<label for="title">Title: </label><input type="text" name="title" />
+						</li>
+						<li>
+							<label for="body">Body: </label><textarea name="body"></textarea>
+						</li>
+					</ul>
+				</form>
+			</div>
+			
+			
+		</div>
+		
+		<div id="footer">
+			
+		</div>
 	</div>
 {% endblock %}
