--- a/getaslot/templates/business/business.html
+++ b/getaslot/templates/business/business.html
@@ -34,16 +34,16 @@
 							<span>Date: </span><span class="date_holder"></span> 
 						</li>
 						<li>
-							<label for="start">Start Time: </label><select name="start"><option value="">Select Start Time</option></select>
+							<label for="start">Start Time: </label><select name="start" disabled="disabled"><option value="">Select Start Time</option></select>
 						</li>
 						<li>
-							<label for="end">End Time: </label><select name="end"><option value="">Select End Time</option></select>
+							<label for="end">End Time: </label><select name="end" disabled="disabled"><option value="">Select End Time</option></select>
 						</li>
 						<li>
-							<label for="title">Title: </label><input type="text" name="title" />
+							<label for="name">Name: </label><input type="text" name="name" />
 						</li>
 						<li>
-							<label for="body">Body: </label><textarea name="body"></textarea>
+							<label for="phone">Phone: </label><input type="text" name="phone">
 						</li>
 					</ul>
 				</form>
