--- a/getaslot/templates/business/business.html
+++ b/getaslot/templates/business/business.html
@@ -40,10 +40,10 @@
 							<label for="end">End Time: </label><select name="end" disabled="disabled"><option value="">Select End Time</option></select>
 						</li>
 						<li>
-							<label for="name">Name: </label><input type="text" name="name" />
+							<label for="name">Name: </label><input type="text" name="title" />
 						</li>
 						<li>
-							<label for="phone">Phone: </label><input type="text" name="phone">
+							<label for="phone">Phone: </label><input type="text" name="body">
 						</li>
 					</ul>
 				</form>
