--- a/getaslot/templates/business/business.html
+++ b/getaslot/templates/business/business.html
@@ -27,7 +27,7 @@
 		<div id="content">
 			<div id="calendar"></div>
 			<div id="event_edit_container">
-				<form>
+				<form id="input_form_event">
 					<input type="hidden" />
 					<ul>
 						<li>
