--- a/getaslot/site_media/media/css/style.css
+++ b/getaslot/site_media/media/css/style.css
@@ -46,7 +46,7 @@ blockquote, q {
 /*Main */
 body {
 	font: 14px  Arial, Helvetica, sans-serif;
-	background: url(../images/about/bg.png) repeat;
+	background: url(../images/design/bg.png) repeat;
 }
 #content{margin: 30px 0 10px;}
 /*frontpage*/
@@ -69,15 +69,14 @@ body {
 .about #creators {margin: 4px 0 0;}
 
 /*calendar*/
-
 #event_edit_container { display:none;}
 
 /*Styling*/
-.story{background: url(../images/about/line.png) repeat 0 bottom;  font-family: Arial, Helvetica, sans-serif; line-height:31px; color:#38373a;} 
+.story{background: url(../images/design/line.png) repeat 0 bottom;  font-family: Arial, Helvetica, sans-serif; line-height:31px; color:#38373a;} 
 .descr{font-family: Helvetica,Arial, sans-serif; font-size:14px; color:#97959c; padding: 20px 0 0 99px ;}
 .descr span { font-weight:bold; font-size: 18px; color:#3b3b3b;display: block;margin: 7px 0 0;}
 .support {color:#97959c !important; font-size: 14px;line-height: 18px;}
 /*Support*/
-.center {text-align: center; }
-.left{float:left; }
+.center {text-align: center;}
+.left{float:left;}
 .clear {clear:both;}
