--- a/getaslot/site_media/media/css/jquery.wekcalendar.css
+++ b/getaslot/site_media/media/css/jquery.wekcalendar.css
@@ -51,6 +51,7 @@ table.wc-time-slots {
     cursor: default;
     table-layout: fixed;
     width: 100%;
+	overflow:hidden;
 }
 .wc-day-column {
 	background: #fff;
