--- a/getaslot/templates/business/business.html
+++ b/getaslot/templates/business/business.html
@@ -24,9 +24,9 @@
 				<div class="topmenu">
 					<ul>
 						<!-- <li><a class="btn1" href="#" title="Dashboard"><span><span>Dashboard</span></span></a></li> -->
-						<li class="parent">
-							<a class="btn1" href="#" title="My Account"><span><span>My Account</span></span></a>
-							<ul class="child" style="display: none;">
+						<li class="parent" id="btn1">
+							<a class="btn1"  href="#" title="My Account"><span><span>My Account</span></span></a>
+							<ul class="child" id="btn1_child" style="display: none;">
 								<li class="ctop"><span>&nbsp;</span></li>
 								<li><a href="#" title="Edit company info"><span><span>Edit company info</span></span></a></li>
 								<li><a href="#" title="Manage employees"><span><span>Manage employees</span></span></a></li>
