--- a/getaslot/templates/business/business.html
+++ b/getaslot/templates/business/business.html
@@ -57,6 +57,12 @@
 		</div>
 		
 		<div id="content">
+			<div class="dropdown">
+				<select name="employee">
+					<option value="1">Bob</option>
+					<option value="2">Anna</option>
+				</select>
+			</div>
 			<div id="calendar"></div>
 			<div id="event_edit_container">
 				<form id="input_form_event">
