--- a/getaslot/site_media/media/css/admin.css
+++ b/getaslot/site_media/media/css/admin.css
@@ -151,5 +151,17 @@ border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;
 .home p {font-size: 15px;color: #040404;}
 .home .offers {float: left;width: 455px;}
 
+.dropdown {
+	position:absolute;
+	margin:0;
+	margin-top:15px;
+	margin-left:15px;
+}
+.dropdown span{
+	float:left;
+}
 
-
+.dropdown select{
+	float:left;
+	padding-top:5px;
+}
