--- a/getaslot/templates/base.html
+++ b/getaslot/templates/base.html
@@ -10,7 +10,7 @@
 	    <link rel="stylesheet" href="{{ STATIC_URL }}css/text.css" />
 	    <link rel="stylesheet" href="{{ STATIC_URL }}css/960.css" />
 	    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" />
-	    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/start/jquery-ui.css" />
+	    <link rel="stylesheet" href="{{ STATIC_URL }}css/jqueryUI.css" />
 
 		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'></script>
 		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js'></script>
