--- a/getaslot/templates/business/business.html
+++ b/getaslot/templates/business/business.html
@@ -72,10 +72,10 @@
 							<span>Date: </span><span class="date_holder"></span> 
 						</li>
 						<li>
-							<label for="start">Start Time: </label><select name="start" readonly="readonly"><option value="">Select Start Time</option></select>
+							<label for="start">Start Time: </label><select name="start" READONLY><option value="">Select Start Time</option></select>
 						</li>
 						<li>
-							<label for="end">End Time: </label><select name="end" readonly="readonly"><option value="">Select End Time</option></select>
+							<label for="end">End Time: </label><select name="end" READONLY><option value="">Select End Time</option></select>
 						</li>
 						<li>
 							<label for="name">Name: </label><input type="text" name="name" />
