--- a/getaslot/templates/index.html
+++ b/getaslot/templates/index.html
@@ -22,7 +22,7 @@
 		
 		#outer {width:501px;margin:0 auto;position: static;}
 		#middle {position: absolute; top: 40%; display: table-cell; vertical-align: middle; width: 501px;}
-		#inner {top: -40%; background: url('{{ STATIC_URL }}images/logo.png') no-repeat;height:95px;padding-top:120px;text-align:center;font: 1.2em  Arial, Helvetica, sans-serif;}
+		#inner {top: -40%; background: url('{{ STATIC_URL }}images/about/logo.png') no-repeat;height:95px;padding-top:120px;text-align:center;font: 1.2em  Arial, Helvetica, sans-serif;}
 		a {color:#38373a;text-decoration:none;}
 		a:hover {color:#f8373a;}
 		
