--- a/getaslot/templates/about.html
+++ b/getaslot/templates/about.html
@@ -4,7 +4,7 @@
 <div id="wrapper" class="container_12 about">
 		<div id="header" class="container_12">
            <div id="logo" class="grid_6 " >
-                            <img src="{{ STATIC_URL }}images/about/logo.png"  />
+                            <img src="{{ STATIC_URL }}images/logo.png"  />
            </div>
            <div id="follow" class="grid_6 ">
                             <a href="http://www.twitter.com/getaslot" target="_blank"><img src="{{ STATIC_URL }}images/about/follow.png"  /></a>
