--- a/html/css/admin.css
+++ b/html/css/admin.css
@@ -181,7 +181,13 @@ border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;
 
 .home #footer {background: #e46246;width: auto;height: 14px;border-top: 1px solid #ba5039;padding: 0;min-height: 0;margin: 38px 0 0;}
 
+.wc-nav button {background: none;border: 0 none;font-size: 12px;font-weight: bold;margin: 0;}
+.wc-nav button.wc-prev {background: url(../images/design/cal_nav.png) no-repeat 0 1px;padding-left: 12px;}
+.wc-nav button.wc-next {background: url(../images/design/cal_nav.png) no-repeat right 1px;padding-right: 12px;}
+button.wc-today {border-left: 1px solid #a8a79e!important;border-right: 1px solid #a8a79e!important;}
 
+.dropdown {left: 16px;top: 11px;position: relative;}
+.dropdown select {border: 0 none;background: url(../images/design/select_bg.png) no-repeat 0 0;width: 191px;font-size: 12px;height: 21px;padding: 2px 3px 2px 2px;margin: 3px 0 0;}
 
 
 
