--- a/html/css/admin.css
+++ b/html/css/admin.css
@@ -181,6 +181,7 @@ border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;
 
 .home #footer {background: #e46246;width: auto;height: 14px;border-top: 1px solid #ba5039;padding: 0;min-height: 0;margin: 38px 0 0;}
 
+.wc-nav {padding-right: 0;}
 .wc-nav button {background: none;border: 0 none;font-size: 12px;font-weight: bold;margin: 0;}
 .wc-nav button.wc-prev {background: url(../images/design/cal_nav.png) no-repeat 0 1px;padding-left: 12px;}
 .wc-nav button.wc-next {background: url(../images/design/cal_nav.png) no-repeat right 1px;padding-right: 12px;}
@@ -195,7 +196,17 @@ button.wc-today {border-left: 1px solid #a8a79e!important;border-right: 1px soli
 border-radius: 0;border-radius: 0;
 }
 
+.infln {min-height: 60px;}
 
+.bcknd .member {float: left;margin: 16px 0 0;}
+.member .mpic {float: left;width: 75px;height: 75px;}
+.member .mtxt {float: left;width: 175px;margin: 17px 0 0 7px;}
+.member .mtxt h1 {font-size: 20px;font-weight: bold;color: #282828;line-height: 22px;}
+.member .mtxt p {font-size: 16px;font-weight: normal;color: #6e6d72;}
 
+.bcknd .info {float: right;margin: 34px 0 0;}
+.btn4 {background: url(../images/design/btn_sprite.png) no-repeat 0 -363px;padding-left: 23px;}
+.btn4 div {background: url(../images/design/btn_sprite.png) no-repeat right -393px;height: 26px;padding-right: 10px;}
+.btn4 span {display: block;padding-top: 5px;color: #010101;font-size: 12px;font-weight: bold;}
 
 
