--- a/html/css/caldemo.css
+++ b/html/css/caldemo.css
@@ -30,7 +30,7 @@ p {
     width: 10em;
 }
 .wc-header td {
-    background: url("images/header-bg.png") repeat-x scroll 0 0 transparent;
+    /*background: url("images/header-bg.png") repeat-x scroll 0 0 transparent;*/
 }
 label {
     display: block;
